# MMSA

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  config.py  requirements.txt  run copy.py  run.py  setup.cfg  tasks copy.csv  tasks.csv
.github/workflows/: publish-to-pypi.yml
assets/visualization/: README.md
config/: config_classification.py  config_debug.py  config_regression.json  config_regression.py  config_run.py  config_tune.py
data/: DataPre.py  TextPre.py  getFeature.py  getLengths.py  load_data.py
models/: AIO.py  AMIO.py
models/baselines/: LMF.py  MDNN.py  MFN.py  MulT.py  TFN.py  __init__.py
models/modules/: position_embedding.py  transformer.py
models/multiTask/: MLF_DNN.py  MLMF.py  MTFN.py  SELF_MM.py  __init__.py
models/our/: MLF_DNN.py  MMFN.py  MMulT.py  __init__.py
models/singleTask/: BERT_MAG.py  EF_LSTM.py  LF_DNN.py  LMF.py  MFM.py  MFN.py  MISA.py  MULT.py  MulT.py  TFN.py  __init__.py
models/subNets/: AlignNets.py  BertTextEncoder.py
results/: result-stat.md
results-bak/sims/: baselines-stat.csv  mlmf-MTAV.csv  mmult-MTAV.csv  mult-M.csv
results-new/sims/: tfn-M.csv
results/mosi/: ef_lstm-mosi.csv  lf_dnn-mosi.csv  lmf-mosi.csv  mfn-mosi.csv  mult-mosi.csv  stat.csv  tfn-mosi.csv
results/msazh/: ef_lstm-M.csv  lf_dnn-M.csv  lmf-M.csv  mfn-M.csv  mlf_dnn-MATV-stat.csv  mlf_dnn-MTAV.csv  mmfn-MTAV.csv  (+3 more)
results/msazh-debug/: ef_lstm.csv  lf_dnn.csv  lmf.csv  mfn.csv  mlf_dnn.csv  mlmf.csv
trains/: ATIO.py  __init__.py
utils/: functions.py  log.py  lossTop.py  metricsTop.py  optimizerTop.py
(+111 files in other folders)
