[metadata]
name = MMSA
version = 2.2.1
author = THUIAR
maintainer = FlameSky, Columbine21
description = Multimodal Sentiment Analysis Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thuiar/MMSA
keywords = multimodal, sentiment analysis, mosi, mosei
project_urls =
    Documentation = https://github.com/thuiar/MMSA/
    Tracker = https://github.com/thuiar/MMSA/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    torch >= 1.9.1
    transformers >= 4.4.0
    numpy >= 1.20.3
    pandas >= 1.2.5
    tqdm >= 4.62.2
    nvidia-ml-py3 >= 7.352.0
    scikit-learn >= 0.24.2
    easydict >= 1.9
    pytorch_transformers >= 1.2.0

[options.packages.find]
where = src